k8s/monitoring/gatus.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      kubectl.kubernetes.io/restartedAt: "2025-10-06T08:15:50+01:00"
    generateName: gatus-5c5564b497-
    labels:
      app: gatus
      pod-template-hash: 5c5564b497
    name: gatus-5c5564b497-7pspx
    namespace: status
    ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicaSet
      name: gatus-5c5564b497
  spec:
    containers:
    - image: twinproduction/gatus:v5.8.0
      imagePullPolicy: IfNotPresent
      livenessProbe:
        failureThreshold: 3
        httpGet:
          path: /health
          port: 8080
          scheme: HTTP
        initialDelaySeconds: 10
        periodSeconds: 30
        successThreshold: 1
        timeoutSeconds: 1
      name: gatus
      ports:
      - containerPort: 8080
        name: http
        protocol: TCP
      readinessProbe:
        failureThreshold: 3
        httpGet:
          path: /health
          port: 8080
          scheme: HTTP
        initialDelaySeconds: 5
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 1
      resources:
        limits:
          cpu: 500m
          memory: 512Mi
        requests:
          cpu: 100m
          memory: 128Mi
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /config
        name: config
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-l7lpb
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: ubuntu-16gb-hel1-1
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - configMap:
        defaultMode: 420
        name: gatus-config
      name: config
    - name: kube-api-access-l7lpb
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2025-10-06T07:15:51Z"
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2025-10-06T07:15:50Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2025-10-06T07:16:02Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2025-10-06T07:16:02Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2025-10-06T07:15:50Z"
      status: "True"
      type: PodScheduled
    containerStatuses:
    - allocatedResources:
        cpu: 100m
        memory: 128Mi
      containerID: containerd://7694085ea9eae1d64d9039c8bcce1900f06d32516d8bca9eae4c3c9ccf074a68
      image: docker.io/twinproduction/gatus:v5.8.0
      imageID: docker.io/twinproduction/gatus@sha256:17a08e7500a6469025a2f4e08dd7502956589ae0231f34933f4badc053e6626c
      lastState: {}
      name: gatus
      ready: true
      resources:
        limits:
          cpu: 500m
          memory: 512Mi
        requests:
          cpu: 100m
          memory: 128Mi
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2025-10-06T07:15:50Z"
      user:
        linux:
          gid: 0
          supplementalGroups:
          - 0
      volumeMounts:
      - mountPath: /config
        name: config
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-l7lpb
        readOnly: true
        recursiveReadOnly: Disabled
    hostIP: 46.62.223.198
    hostIPs:
    - ip: 46.62.223.198
    - ip: 2a01:4f9:c013:abef::1
    phase: Running
    podIP: 10.42.0.237
    podIPs:
    - ip: 10.42.0.237
    qosClass: Burstable
    startTime: "2025-10-06T07:15:50Z"
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"gatus"},"name":"gatus","namespace":"status"},"spec":{"ports":[{"name":"http","port":80,"targetPort":8080}],"selector":{"app":"gatus"},"type":"ClusterIP"}}
    labels:
      app: gatus
    name: gatus
    namespace: status
  spec:
    clusterIP: 10.43.93.9
    clusterIPs:
    - 10.43.93.9
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: gatus
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"status-page","namespace":"status"},"spec":{"ports":[{"name":"http","port":80,"targetPort":3000}],"selector":{"app":"status-page"},"type":"ClusterIP"}}
    name: status-page
    namespace: status
  spec:
    clusterIP: 10.43.163.104
    clusterIPs:
    - 10.43.163.104
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
    selector:
      app: status-page
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"uptime-kuma","namespace":"status"},"spec":{"ports":[{"port":3001,"targetPort":3001}],"selector":{"app":"uptime-kuma"}}}
    name: uptime-kuma
    namespace: status
  spec:
    clusterIP: 10.43.234.78
    clusterIPs:
    - 10.43.234.78
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 3001
      protocol: TCP
      targetPort: 3001
    selector:
      app: uptime-kuma
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "3"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"gatus"},"name":"gatus","namespace":"status"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"gatus"}},"template":{"metadata":{"labels":{"app":"gatus"}},"spec":{"containers":[{"image":"twinproduction/gatus:v5.8.0","livenessProbe":{"httpGet":{"path":"/health","port":8080},"initialDelaySeconds":10,"periodSeconds":30},"name":"gatus","ports":[{"containerPort":8080,"name":"http"}],"readinessProbe": [...]
    labels:
      app: gatus
    name: gatus
    namespace: status
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: gatus
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2025-10-06T08:15:50+01:00"
        labels:
          app: gatus
      spec:
        containers:
        - image: twinproduction/gatus:v5.8.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          name: gatus
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /config
            name: config
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: gatus-config
          name: config
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2025-10-06T07:08:43Z"
      lastUpdateTime: "2025-10-06T07:08:43Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2025-10-06T07:08:27Z"
      lastUpdateTime: "2025-10-06T07:16:02Z"
      message: ReplicaSet "gatus-5c5564b497" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 3
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: ReplicaSet
  metadata:
    annotations:
      deployment.kubernetes.io/desired-replicas: "1"
      deployment.kubernetes.io/max-replicas: "2"
      deployment.kubernetes.io/revision: "1"
    labels:
      app: gatus
      pod-template-hash: 58c9d65659
    name: gatus-58c9d65659
    namespace: status
    ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: Deployment
      name: gatus
  spec:
    replicas: 0
    selector:
      matchLabels:
        app: gatus
        pod-template-hash: 58c9d65659
    template:
      metadata:
        labels:
          app: gatus
          pod-template-hash: 58c9d65659
      spec:
        containers:
        - image: twinproduction/gatus:v5.8.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          name: gatus
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /config
            name: config
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: gatus-config
          name: config
  status:
    observedGeneration: 2
    replicas: 0
- apiVersion: apps/v1
  kind: ReplicaSet
  metadata:
    annotations:
      deployment.kubernetes.io/desired-replicas: "1"
      deployment.kubernetes.io/max-replicas: "2"
      deployment.kubernetes.io/revision: "3"
    labels:
      app: gatus
      pod-template-hash: 5c5564b497
    name: gatus-5c5564b497
    namespace: status
    ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: Deployment
      name: gatus
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: gatus
        pod-template-hash: 5c5564b497
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2025-10-06T08:15:50+01:00"
        labels:
          app: gatus
          pod-template-hash: 5c5564b497
      spec:
        containers:
        - image: twinproduction/gatus:v5.8.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          name: gatus
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /config
            name: config
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: gatus-config
          name: config
  status:
    availableReplicas: 1
    fullyLabeledReplicas: 1
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
- apiVersion: apps/v1
  kind: ReplicaSet
  metadata:
    annotations:
      deployment.kubernetes.io/desired-replicas: "1"
      deployment.kubernetes.io/max-replicas: "2"
      deployment.kubernetes.io/revision: "2"
    labels:
      app: gatus
      pod-template-hash: "897667965"
    name: gatus-897667965
    namespace: status
    ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: Deployment
      name: gatus
  spec:
    replicas: 0
    selector:
      matchLabels:
        app: gatus
        pod-template-hash: "897667965"
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2025-10-06T08:11:50+01:00"
        labels:
          app: gatus
          pod-template-hash: "897667965"
      spec:
        containers:
        - image: twinproduction/gatus:v5.8.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          name: gatus
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /config
            name: config
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: gatus-config
          name: config
  status:
    observedGeneration: 2
    replicas: 0
- apiVersion: v1
  data:
    config.yaml: |
      [...]
  kind: ConfigMap
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","data":{"config.yaml":"metrics: true\nstorage:\n  type: postgres\n  path: \"postgres://gatus_user:GATUS_DB_PASSWORD_PLACEHOLDER@postgresql-0.postgresql.infrastructure.svc.cluster.local:5432/gatus?sslmode=disable\"\n\nendpoints:\n  - name: Core Pipeline (Production)\n    group: Applications\n    url: \"https://core-pipeline.theedgestory.org/health\"\n    interval: 60s\n    conditions:\n      - \"[STATUS] == 200\"\n      - \"[RESPONSE_TIME] \u003c 1000\"\n    alerts:\n   [...]
    name: gatus-config
    namespace: status
- apiVersion: v1
  data:
    ca.crt: |
      -----BEGIN CERTIFICATE-----
      MIIBdzCCAR2gAwIBAgIBADAKBggqhkjOPQQDAjAjMSEwHwYDVQQDDBhrM3Mtc2Vy
[...]
      -----END CERTIFICATE-----
  kind: ConfigMap
  metadata:
    annotations:
      kubernetes.io/description: Contains a CA bundle that can be used to verify the
        kube-apiserver when using internal endpoints such as the internal service
        IP or kubernetes.default.svc. No other usage is guaranteed across distributions
        of Kubernetes clusters.
    name: kube-root-ca.crt
    namespace: status
- apiVersion: v1
  data:
    index.html: |
      [...]
    package.json: |
      {
        "name": "status-page",
        "version": "1.0.0",
        "description": "The Edge Story System Status Page",
        "main": "server.js",
        "scripts": {
          "start": "node server.js"
        },
        "dependencies": {
          "express": "^4.18.2"
        },
        "engines": {
          "node": ">=18.0.0"
        }
      }
    server.js: |
      [...]
  kind: ConfigMap
  metadata:
    name: status-page-files
    namespace: status
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: infrastructure:networking.k8s.io/Ingress:status/gatus
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"infrastructure:networking.k8s.io/Ingress:status/gatus","cert-manager.io/cluster-issuer":"letsencrypt-prod"},"name":"gatus","namespace":"status"},"spec":{"ingressClassName":"nginx","rules":[{"host":"status.theedgestory.org","http":{"paths":[{"backend":{"service":{"name":"gatus","port":{"number":8080}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["status.theedgestory. [...]
      nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email,Authorization
      nginx.ingress.kubernetes.io/auth-signin: https://auth.theedgestory.org/oauth2/start?rd=$scheme://$host$request_uri
      nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.oauth2-proxy.svc.cluster.local:4180/oauth2/auth
      nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
      nginx.ingress.kubernetes.io/service-upstream: "true"
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    name: gatus
    namespace: status
  spec:
    ingressClassName: nginx
    rules:
    - host: status.theedgestory.org
      http:
        paths:
        - backend:
            service:
              name: gatus
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - status.theedgestory.org
      secretName: cloudflare-origin-tls
  status:
    loadBalancer:
      ingress:
      - ip: 46.62.223.198
kind: List
metadata:
